# lab-ble-mcp

./: CHANGELOG.md  README.md  pyproject.toml
docs/: ADDING_A_PROFILE.md
src/lab_ble_mcp/: __init__.py  backend.py  cli.py  codec.py  discovery.py  mock_backend.py  profile.py  resource.py  wire.py
src/lab_ble_mcp/builtin_instruments/: __init__.py  omron_2jcie.yaml  switchbot_meter.yaml
src/lab_ble_mcp/profiles/: __init__.py  omron_2jcie.yaml  switchbot_meter.yaml
tests/: test_assets_workflows.py  test_backends.py  test_discovery_packaging.py  test_instrument_definitions.py  test_integration.py  test_profiles.py  test_wire_resource.py
