[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-ble-mcp"
version = "0.1.0"
description = "BLE environment-sensor backend for lab-executor-mcp"
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
    "laboratory-automation", "instrument-control", "lab-executor-mcp",
    "bluetooth-low-energy", "environment-sensor", "experiment-automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "lab-executor-mcp>=2.35.0,<3.0.0",
    "bleak>=0.22,<2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.8",
    "build>=1.0",
    "twine>=5.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/TECTOS-JP/lab-ble-mcp"
Repository = "https://github.com/TECTOS-JP/lab-ble-mcp"
Changelog = "https://github.com/TECTOS-JP/lab-ble-mcp/blob/main/CHANGELOG.md"
Issues = "https://github.com/TECTOS-JP/lab-ble-mcp/issues"

[project.entry-points."lab_executor.backends"]
ble = "lab_ble_mcp.discovery:make_backend"

[project.scripts]
lab-ble = "lab_ble_mcp.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/.gitignore",
    "/src/lab_ble_mcp",
    "/tests",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
    "/conftest.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lab_ble_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
